# four-im

./: LICENSE.md
solana/smart-contracts/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
solana/smart-contracts/src/client/: instantMessaging.ts  main.ts  solanaBorsh.ts
solana/smart-contracts/src/client/im/: Service.ts  instruction.ts  state.ts
solana/smart-contracts/src/program/: Cargo.toml
solana/smart-contracts/src/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
solana/smart-contracts/src/program/tests/: lib.rs  program_test.rs  utils.rs
